[package]
name = "causal-length"
version = "0.1.0"
authors = ["Nathan Hawkins <utsl@utsl.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["serialization"]
serialization = ["serde"]

[dependencies]
serde = { version = "1", optional = true }
num-traits = "0"
num-integer = "0"

[dev-dependencies]
serde_json = "1"
