[package]
name = "causal-length"
version = "0.2.0"
authors = ["Nathan Hawkins <utsl@utsl.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = ["serialization"]
serialization = ["serde", "serde_derive"]

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
num-traits = "0"
num-integer = "0"

[dev-dependencies]
serde_json = "1"
rand="0"
quickcheck = "1"
quickcheck_macros = "1"
